whispers_data_process

--- a/SiamCAR-master/experiments/siamcar_r50/config.yaml
+++ b/SiamCAR-master/experiments/siamcar_r50/config.yaml
@@ -30,7 +30,7 @@ TRACK:
 TRAIN:
     EPOCH: 20
     START_EPOCH: 0
-    BATCH_SIZE: 80 # 32
+    BATCH_SIZE: 32 # 32
     BASE_LR: 0.005
     CLS_WEIGHT: 1.0
     LOC_WEIGHT: 3.0
@@ -56,10 +56,12 @@ TRAIN:
 
 DATASET:
     NAMES: 
-    - 'VID'
-    - 'YOUTUBEBB'
-    - 'COCO'
-    - 'DET'
+    # - 'VID'
+    # - 'YOUTUBEBB'
+    # - 'COCO'
+    # - 'DET'
+    # - 'GOT'
+    - 'Whispers' 
 
     TEMPLATE:
         SHIFT: 4
